// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe mostrar el componente con el titulo personalizado 1`] = `
<img
  alt="product"
  className="productImg undefined"
  src="https://rincondelatecnologia.com/wp-content/uploads/2015/09/Googlelogo20102013-1.png"
/>
`;

exports[`ProductTitle debe mostrar el componente con la imagen del producto 1`] = `
<img
  alt="product"
  className="productImg title-center"
  src="https://rincondelatecnologia.com/wp-content/uploads/2015/09/Googlelogo20102013-1.png"
/>
`;

exports[`ProductTitle debe mostrar el componente con la imagen del producto 2`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
